<resources>
    <string name="app_name">Task List</string>
    <string name="action_settings">Settings</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="title">Task Title</string>
    <string name="description">Task Description</string>
    <string name="empty">There are currently no tasks! Click + to add one!</string>
    <string name="enter_description">Enter task description!</string>
    <string name="edit_description">Edit task information!</string>
</resources>
