<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_description"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:hint="@string/title"
        android:inputType="textCapWords"
        />

    <EditText
        android:id="@+id/add_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lines="4"
        android:imeOptions="actionDone"
        android:hint="@string/description"
        android:inputType="textCapWords"
        />

    <Button
        android:id="@+id/add_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/add_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:layout_weight="1"
        />

</LinearLayout>